# trabalho2ed-minio-sql

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  run_mkdocs.py  sitemap.xml
arquitetura_medallion/: index.html
camada_bronze/: index.html
data/: autor.csv  categoria.csv  emprestimo.csv  livro.csv  membro.csv  multa.csv
docs/: arquitetura_medallion.md  camada_bronze.md  enunciado.md  index.md  modelo_er_biblioteca.md  prerequisitos.md  tabelas_gerenciadas_vs_nao_gerenciadas.md
enunciado/: index.html
modelo_er_biblioteca/: index.html
notebook/: 00_setup_sqlserver.ipynb  01_extracao_sqlserver_landing_zone.ipynb  02_landing_to_bronze_delta.ipynb  dml_bronze.ipynb
prerequisitos/: index.html
search/: search_index.json
tabelas_gerenciadas_vs_nao_gerenciadas/: index.html
